fix no wrap

--- a/src/components/Templates/SkillTemplate/styles.module.scss
+++ b/src/components/Templates/SkillTemplate/styles.module.scss
@@ -54,7 +54,6 @@
     border-radius: 5px;
     margin: 0 var(--space-2-fixed);
     padding: calc(0.5 * var(--space-2-fixed)) var(--space-6-fixed);
-    white-space: nowrap;
   }
 
   &[data-type='term'] {
